finally fixed stuff

--- a/Working_Version.ipynb
+++ b/Working_Version.ipynb
@@ -2,35 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "### imports\n",
     "\n",
+    "from time import sleep \n",
     "import os\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import json\n",
+    "\n",
     "### directory to process csv\n",
     "\n",
     "workingDir = os.getcwd() + '\\\\toProcess'\n",
     "# print(workingDir)\n",
-    "# print(os.listdir(workingDir))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# print(os.listdir(workingDir))\n",
+    "\n",
     "### processing csv\n",
     "\n",
     "## function to handle complex csv format\n",
@@ -54,32 +41,27 @@
     "            anotherList.append(astr[alist[0]:(alist[1] + 1)])\n",
     "            anotherList.append(astr[(alist[-1] + 1):])\n",
     "        elif len(alist) == 4:\n",
-    "            anotherList.append(astr[:alist[0]])\n",
     "            anotherList.append(astr[alist[0]:(alist[1] + 1)])\n",
-    "            anotherList.append(astr[(alist[1]):(alist[2] + 1)])\n",
+    "            anotherList.append(astr[(alist[1] + 1):(alist[2])])\n",
     "            anotherList.append(astr[(alist[2]):(alist[3] + 1)])\n",
     "            anotherList.append(astr[(alist[-1] + 1):])\n",
-    "    \n",
+    "#             print(astr[(alist[-1] + 1):])\n",
+    "            \n",
     "    difList = []\n",
     "    \n",
     "    # changing csv divider from , to : leaving the commas from \"\"\n",
     "    for each in anotherList:\n",
     "        dif = None\n",
-    "        if divider in each:\n",
-    "            dif = each.replace(divider, '')\n",
-    "        else:\n",
-    "            dif = each.replace(charToSave, changeWith)\n",
-    "        difList.append(dif)\n",
-    "    \n",
-    "    return ''.join(difList)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        if len(each) > 1:\n",
+    "            if divider in each:\n",
+    "                dif = each.replace(divider, '')\n",
+    "            else:\n",
+    "                dif = each.replace(charToSave, changeWith)\n",
+    "            difList.append(dif)\n",
+    "\n",
+    "#     print(difList)\n",
+    "    return ''.join(difList)\n",
+    "\n",
     "### processing csv files \n",
     "filesToOpen = []\n",
     "\n",
@@ -102,21 +84,18 @@
     "            tempFilesToOpen.append(each.replace(',',':'))\n",
     "        else:\n",
     "            tempFilesToOpen.append(cleanSubstrings(each))\n",
-    "\n",
+    "    country = None\n",
     "    for each in tempFilesToOpen:\n",
     "        tempList = each.split(':')\n",
     "        #print(tempList)\n",
     "        countryDict[tempList[3]] = countryDict.get(tempList[3], {}) \n",
     "        countryDict[tempList[3]][tempList[2]] = countryDict[tempList[3]].get(tempList[2], {})\n",
-    "        countryDict[tempList[3]][tempList[2]][tempList[0]] = countryDict[tempList[3]][tempList[2]].get(tempList[0], tempList[-1].strip())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        countryDict[tempList[3]][tempList[2]][tempList[0]] = countryDict[tempList[3]][tempList[2]].get(tempList[0], tempList[-1].strip())\n",
+    "        country = countryDict[tempList[3]][tempList[2]]\n",
+    "        \n",
+    "#     print('{} is processed'.format(country))\n",
+    "#     sleep(0.1)\n",
+    "\n",
     "### optional creation of JSON file, if anybody needs to use it in other coding languages\n",
     "countryJson = json.dumps(countryDict, indent = 2)\n",
     "with open('countries.json', 'w') as f:\n",
@@ -131,15 +110,7 @@
     "tempDir = [each.replace('$','_').replace(' ', '_').replace('%','_percent_').replace('(', '-').replace(')', '-').replace('/','-').replace(':', '-') for each in tempNames]\n",
     "for each in tempDir:\n",
     "    os.mkdir(each)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "### both gline.js and gline.htm files are created \n",
     "for i in range(len(tempNames)):\n",
     "    gline = [['Year', ]]\n",
@@ -170,7 +141,7 @@
     "        f.write('gline = ')\n",
     "        f.write(json.dumps(gline))\n",
     "        \n",
-    "    with open(tempDir[i] + '\\\\gline.htm', 'a') as htm:\n",
+    "    with open(tempDir[i] + '\\\\gline.html', 'a') as htm:\n",
     "        htm.write('''<html>\n",
     "  <head>\n",
     "    <script type=\"text/javascript\" src=\"gline.js\"></script>\n",
@@ -183,7 +154,7 @@
     "\n",
     "        var options = {\n",
     "          title: \\'''' + filename + '''\\',\n",
-    "          chartArea: {left:'10%',top:'10%', width: '65%', height: '65%'}\n",
+    "          chartArea: {left:'10%',top:'10%', width: '75%', height: '75%'}\n",
     "        };\n",
     "\n",
     "        var chart = new google.visualization.LineChart(document.getElementById('chart_div'));\n",
@@ -192,25 +163,29 @@
     "    </script>\n",
     "  </head>\n",
     "  <body>\n",
-    "    <div id=\"chart_div\" style=\"width: 1300px; height: 600px;\"></div>\n",
-    "    <a href=\"..\\index.htm\">Go Back</a>\n",
+    "    <p><a href=\"https://github.com/mirakklys/py4me\">Git-Hub rep</a></p>\n",
+    "    <div id=\"chart_div\" style=\"width: 1300px; height: 800px;\"></div>\n",
+    "    <p><a href=\"..\\\\index.html\">Go Back</a></p>\n",
+    "    <p><a href=\"toProcess\\\\toProcess.zip\">CSV files in archive</a>\n",
     "  </body>\n",
     "</html>\n",
     "''')\n",
     "        \n",
     "### index.htm file with all hyperlinks to the graphs\n",
-    "indexHtm = open('index.htm', 'a')\n",
+    "indexHtm = open('index.html', 'a')\n",
     "indexHtm.write('''<html>\n",
     "  <head>\n",
     "   <title>Index page</title>\n",
     "  </head>\n",
-    "  <body>''')\n",
+    "  <body>\n",
+    "    <p><a href=\"https://github.com/mirakklys/py4me\">Git-Hub rep</a></p>\n",
+    "    <p><a href=\"toProcess\\\\toProcess.zip\">CSV files in archive</a></p>''')\n",
     "for each in tempDir:\n",
-    "    indexHtm.write('<p><a href=\"' + each + '\\\\gline.htm\">' + each + '</a></p>')\n",
+    "    indexHtm.write('<p><a href=\"' + each + '\\\\gline.html\">' + each + '</a></p>')\n",
     "    \n",
     "indexHtm.write('''  </body>\n",
     "</html>''')\n",
-    "indexHtm.close()"
+    "indexHtm.close()\n"
    ]
   },
   {
