--- a/Working_Version.ipynb
+++ b/Working_Version.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,45 +21,41 @@
     "### processing csv\n",
     "\n",
     "## function to handle complex csv format\n",
-    "def cleanSubstrings(astr, divider = '\"', charToSave = ',', changeWith = ':'):\n",
+    "def cleanSubstrings(astr, divider = '\"', toSave = ',', toChange = ':'):\n",
     "\n",
-    "    # define \" positions\n",
-    "    alist = []\n",
-    "    count = 0\n",
+    "    tempStr = astr\n",
+    "    tempList = []\n",
+    "    start = None\n",
+    "    end = None\n",
     "    \n",
-    "    for each in astr:\n",
-    "        if each == divider:\n",
-    "            alist.append(count)\n",
-    "        count += 1\n",
-    "\n",
-    "    anotherList = []\n",
+    "    for each in range(tempStr.count(divider) + 1):\n",
+    "        if len(tempStr) > 1:\n",
+    "            for each in tempStr:\n",
+    "                if each == divider and tempStr.index(each) == 0:\n",
+    "                    start = 0\n",
+    "                    end = tempStr.replace(divider, '*', 1).find(divider) + 1\n",
+    "                    tempList.append(tempStr[start:end])\n",
+    "                    tempStr = tempStr[end:]\n",
+    "                    break\n",
+    "                elif each != divider and tempStr.index(each) == 0:\n",
+    "                    start = 0\n",
+    "                    end = tempStr.find(divider)\n",
+    "                    tempList.append(tempStr[start:end])\n",
+    "                    tempStr = tempStr[end:]\n",
+    "                    break\n",
+    "                elif divider not in each:\n",
+    "                    tempList.append(tempStr)\n",
+    "                    tempStr = ''\n",
+    "                    break\n",
+    "        else:\n",
+    "            break\n",
+    "    difList = []        \n",
+    "    for each in tempList:\n",
+    "        if divider not in each:\n",
+    "            difList.append(each.replace(toSave, toChange))\n",
+    "        else:\n",
+    "            difList.append(each.replace(divider, ''))\n",
     "    \n",
-    "    # creating list of each line in the file\n",
-    "    for each in range(len(alist)):\n",
-    "        if len(alist) == 2:\n",
-    "            anotherList.append(astr[:alist[0]])\n",
-    "            anotherList.append(astr[alist[0]:(alist[1] + 1)])\n",
-    "            anotherList.append(astr[(alist[-1] + 1):])\n",
-    "        elif len(alist) == 4:\n",
-    "            anotherList.append(astr[alist[0]:(alist[1] + 1)])\n",
-    "            anotherList.append(astr[(alist[1] + 1):(alist[2])])\n",
-    "            anotherList.append(astr[(alist[2]):(alist[3] + 1)])\n",
-    "            anotherList.append(astr[(alist[-1] + 1):])\n",
-    "#             print(astr[(alist[-1] + 1):])\n",
-    "            \n",
-    "    difList = []\n",
-    "    \n",
-    "    # changing csv divider from , to : leaving the commas from \"\"\n",
-    "    for each in anotherList:\n",
-    "        dif = None\n",
-    "        if len(each) > 1:\n",
-    "            if divider in each:\n",
-    "                dif = each.replace(divider, '')\n",
-    "            else:\n",
-    "                dif = each.replace(charToSave, changeWith)\n",
-    "            difList.append(dif)\n",
-    "\n",
-    "#     print(difList)\n",
     "    return ''.join(difList)\n",
     "\n",
     "### processing csv files \n",
@@ -76,7 +72,6 @@
     "for fileToOpen in filesToOpen:\n",
     "    with open(fileToOpen) as inp:\n",
     "        swissKnife = [each.strip() for each in inp][2:]\n",
-    "\n",
     "    tempFilesToOpen = []\n",
     "\n",
     "    for each in swissKnife:\n",
@@ -84,15 +79,16 @@
     "            tempFilesToOpen.append(each.replace(',',':'))\n",
     "        else:\n",
     "            tempFilesToOpen.append(cleanSubstrings(each))\n",
-    "    country = None\n",
+    "            \n",
     "    for each in tempFilesToOpen:\n",
     "        tempList = each.split(':')\n",
-    "        #print(tempList)\n",
     "        countryDict[tempList[3]] = countryDict.get(tempList[3], {}) \n",
     "        countryDict[tempList[3]][tempList[2]] = countryDict[tempList[3]].get(tempList[2], {})\n",
-    "        countryDict[tempList[3]][tempList[2]][tempList[0]] = countryDict[tempList[3]][tempList[2]].get(tempList[0], tempList[-1].strip())\n",
-    "        country = countryDict[tempList[3]][tempList[2]]\n",
-    "        \n",
+    "        if tempList[-1] == '':\n",
+    "            countryDict[tempList[3]][tempList[2]][tempList[0]] = countryDict[tempList[3]][tempList[2]].get(tempList[0], '0')\n",
+    "#             print('saved as 0', countryDict[tempList[3]][tempList[2]][tempList[0]])\n",
+    "        else:\n",
+    "            countryDict[tempList[3]][tempList[2]][tempList[0]] = countryDict[tempList[3]][tempList[2]].get(tempList[0], tempList[-1].strip())\n",
     "#     print('{} is processed'.format(country))\n",
     "#     sleep(0.1)\n",
     "\n",
@@ -166,7 +162,7 @@
     "    <p><a href=\"https://github.com/mirakklys/py4me\">Git-Hub rep</a></p>\n",
     "    <div id=\"chart_div\" style=\"width: 1300px; height: 800px;\"></div>\n",
     "    <p><a href=\"..\\\\index.html\">Go Back</a></p>\n",
-    "    <p><a href=\"toProcess\\\\toProcess.zip\">CSV files in archive</a>\n",
+    "    <p><a href=\"data\\\\toProcess.zip\">CSV files in archive</a>\n",
     "  </body>\n",
     "</html>\n",
     "''')\n",
@@ -179,7 +175,7 @@
     "  </head>\n",
     "  <body>\n",
     "    <p><a href=\"https://github.com/mirakklys/py4me\">Git-Hub rep</a></p>\n",
-    "    <p><a href=\"toProcess\\\\toProcess.zip\">CSV files in archive</a></p>''')\n",
+    "    <p><a href=\"data\\\\toProcess.zip\">CSV files in archive</a></p>''')\n",
     "for each in tempDir:\n",
     "    indexHtm.write('<p><a href=\"' + each + '\\\\gline.html\">' + each + '</a></p>')\n",
     "    \n",
